# EdgeSim

./: .gitignore  PROJECT_DESCRIPTION.md  README.md  all_code.txt  anchors.csv  codex_context.txt  collect_code.py  pyproject.toml  requirements.txt  todo
backend/: main.py
data/: anchors.csv
demo/: README.md  index.html  package-lock.json  package.json
demo/scripts/: build_demo_data.py  text_check.py
frames_sample/: _frame_budget.json
frontend/: BACKEND_CONNECTION.md  README_frontend.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  README.md  SETUP_GUIDE.md  index.css  index.html
runs/: manifest.json  world.json
runs/2025-09-12_23-02-33_Night_shift_wet_floor_near_dock_human_ru/: coverage.json  manifest.json  report.md  scenario.yaml  seeds.json  summary.json
runs/2025-09-14_15-13-09_Night_shift_wet_floor_near_dock_human_cr/: coverage.json  manifest.json  perf.json  report.html  report.md  scenario.yaml  seeds.json  summary.json
site_profiles/: AcmeDC1.json  EdgeCases.json
src/edgesim/: __init__.py  batch.py  cli.py  coverage.py  dataset_manifest.py  injectors.py  io_utils.py  metrics.py  parser.py  planner.py  report.py  report_html.py  report_latest.py  reporter.py  rollout.py  sampling.py  scenario.py  schema.py  schema_validate.py  sim_one.py  utils.py  viewer.py  world.py  (+1 more)
src/edgesim.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_check_data_quality.py  validate_batch.py
tools/: check_data_quality.py  compare_runs.py  summarize_runs.py
(+188 files in other folders)
